tests/cases/standard-library/errors/string/std-string-append-f64-different-zone.ari
fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  var text = std::string::new(ref mut source, 1);
  text.append_f64_in(ref mut target, 1.5f64, 1);
  zone::destroy(target);
  zone::destroy(source);
  return text.len();
}
